<?xml version="1.0" encoding="UTF-8"?>

<!--
This file is part of SoSy-Lab Java-Project Template,
a collection of common files and build definitions for Java projects:
https://gitlab.com/sosy-lab/software/java-project-template

SPDX-FileCopyrightText: 2007-2025 Dirk Beyer <https://www.sosy-lab.org>

SPDX-License-Identifier: Apache-2.0
-->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>org.sosy_lab.cpachecker</groupId>
  <artifactId>cpachecker-maven-bridge</artifactId>
  <version>0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>CPAchecker Maven Bridge</name>
  <description>Bridge configuration that delegates Maven and IDE build phases to existing Ant targets.</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>21</maven.compiler.source>
    <maven.compiler.target>21</maven.compiler.target>

    <ivy.repo.url>https://www.sosy-lab.org/ivy</ivy.repo.url>
    <ivy.cache.dir>${project.build.directory}/ivy-cache</ivy.cache.dir>

    <ant.clean.target>clean</ant.clean.target>
    <ant.compile.target>build</ant.compile.target>
    <ant.test.target>unit-tests</ant.test.target>
    <ant.package.target>jar</ant.package.target>
    <ant.verify.target>tests</ant.verify.target>
    <ant.install.target>dist</ant.install.target>
    <ant.deploy.target>dist-unix-zip</ant.deploy.target>

    <ant.extra.args></ant.extra.args>
  </properties>

  <build>
    <plugins>

      <!-- Delegation of Maven build lifecycle to Ant -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-antrun-plugin</artifactId>
        <version>3.1.0</version>

        <dependencies>
          <dependency>
            <groupId>org.apache.ivy</groupId>
            <artifactId>ivy</artifactId>
            <version>2.5.3</version>
          </dependency>
        </dependencies>

        <executions>
          <execution>
            <id>ant-clean</id>
            <phase>clean</phase>
            <configuration>
              <target>
                <ant antfile="build.xml" target="${ant.clean.target}" inheritAll="true">
                  <property name="ivy.repo.url" value="${ivy.repo.url}"/>
                  <property name="ivy.cache.dir" value="${ivy.cache.dir}"/>
                  <property name="ant.extra.args" value="${ant.extra.args}"/>
                </ant>
              </target>
            </configuration>
            <goals><goal>run</goal></goals>
          </execution>

          <execution>
            <id>ant-build</id>
            <phase>compile</phase>
            <configuration>
              <target>
                <ant antfile="build.xml" target="${ant.compile.target}" inheritAll="true">
                  <property name="ivy.repo.url" value="${ivy.repo.url}"/>
                  <property name="ivy.cache.dir" value="${ivy.cache.dir}"/>
                  <property name="ant.extra.args" value="${ant.extra.args}"/>
                </ant>
              </target>
            </configuration>
            <goals><goal>run</goal></goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.13.0</version>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-install-plugin</artifactId>
        <version>3.1.2</version>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <version>3.1.2</version>
        <configuration>
          <skip>true</skip>
        </configuration>
      </plugin>

    </plugins>
  </build>
</project>
